attr-2.4.29 (31 January 2006)
	- Updated Polish translation.
	  Thanks to Jakub Bogusz <qboosh@pld-linux.org> for this.

attr-2.4.28 (13 January 2006)
	- Implement the IRIX list_attr interfaces in libattr.so,
	  the final piece of the IRIX attr compatibility API.
	- Put back the -L (list) option in attr(1).

attr-2.4.27 (05 December 2005)
	- Revert xattr.h/attributes.h to stating "Lesser GPL",
	  accidentally marked "GPL" in previous version.

attr-2.4.26 (10 November 2005)
	- Sync up build system (m4 macros, etc) with other projects
	- Update SGI copyright/licence notices

attr-2.4.25 (11 October 2005)
	- Add French translation from the debian-l10n-french folks
	  (thanks to Guilhelm Panaget)

attr-2.4.24 (10 August 2005)
	- Fix botched error reporting in attr_copy_file.c
	- Updated polish translation (both thanks to Jakub Bogusz)

attr-2.4.23 (3 June 2005)
	- attr_copy_{fd,file}: Reduce verboseness for ENOTSUP errors.
	  ENOTSUPP is common when copying between xattr enabled and
	  xattr disabled file systems.

attr-2.4.22 (21 February 2005)
	- Allocate the line buffer dynamically when reading from a file.
	  This mainly fixes restoring of large attributes.

attr-2.4.21 (31 January 2005)
	- Replace use of _POSIX_PATH_MAX with the larger PATH_MAX
	  (thanks to Andree Leidenfrost).

attr-2.4.20 (30 November 2004)
	- Licensing fixes and clarifications.
	- Update outdated email addresses.

attr-2.4.19 (29 September 2004)
	- Update m4 macros, incorporating some portability changes.

attr-2.4.18 (21 September 2004)
	- Add Dutch translation (thanks to Luk Claes)

attr-2.4.17 (8 September 2004)
	- Clarify setfattr usage information.
	- Fix email address in manual pages.

attr-2.4.16 (21 April 2004)
	- Updated Debian packaging dependency information.

attr-2.4.15 (02 February 2004)
	- Included Polish message translations by Jakub Bogusz.

attr-2.4.14 (14 January 2004)
	- When attr_copy_file is used on a symlink, process the