@@ -1,6 +1,9 @@
 attr-2.4.29 (31 January 2006)
 	- Updated Polish translation.
 	  Thanks to Jakub Bogusz <qboosh@pld-linux.org> for this.
+	- Fixed rpm specfile with respect to INSTALL_{USER,GROUP}.
+	- Fixed a couple of double frees in libattr attr copy
+	  routines, thanks to Andreas.
 
 attr-2.4.28 (13 January 2006)
 	- Implement the IRIX list_attr interfaces in libattr.so,
